force-app/main/default/objects/QuickBridge_Admin_Session__c/QuickBridge_Admin_Session__c.object-meta.xml
<CustomObject>
    <label>QuickBridge Admin Session</label>
    <nameField>
        <displayFormat>QBAS-{000000}</displayFormat>
        <label>Admin Session #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBridge Admin Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>