force-app/main/default/objects/QuickBridge_Admin_Session__c/fields/Last_Used_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_At__c</fullName>
    <label>Last Used At</label>
    <type>DateTime</type>
</CustomField>