force-app/main/default/objects/QuickBridge_Admin_Session__c/fields/Revoked_At__c.field-meta.xml
<CustomField>
    <fullName>Revoked_At__c</fullName>
    <label>Revoked At</label>
    <type>DateTime</type>
</CustomField>