force-app/main/default/objects/QuickBridge_Admin_Session__c/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Token Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>